--- a/index.html
+++ b/index.html
@@ -26,27 +26,8 @@
         </nav>
     </header>
 
-    <section class="inicial" id="home">
-    </section>
-    <!--
-    <h3>Nossos Serviços</h3>
-    <section class="servicos">
-        <div class="box">
-            <i class="fas fa-tv"></i>
-            <h4>Canais</h4>
-            <p>Programação variada e estável em alta qualidade.</p>
-        </div>
-        <div class="box">
-            <i class="fas fa-wifi"></i>
-            <h4>Internet Via Rádio</h4>
-            <p>Conexão rápida e acessível para todos.</p>
-        </div>
-        <div class="box">
-            <i class="fas fa-tools"></i>
-            <h4>Serviços de Manutenção</h4>
-            <p>Reparos e suporte técnico eficiente.</p>
-        </div> -->
-
+    <section>
+        <img src="Imagens/Red Minimal Talk About Marketing LinkedIn Banner.png" class="inicial">
     </section>
     <h3 class="conheca">Conheça nossos planos e assine já!</h3>
     <section class="planos">
@@ -107,7 +88,7 @@
             <i class="fas fa-users"></i>
             <h4>Quem somos</h4>
             <p class="texto">Somos uma empresa comprometida em oferecer soluções inovadoras e de qualidade para atender às suas necessidades. Com uma equipe dedicada e apaixonada pelo que faz, trabalhamos para entregar serviços confiáveis, acessíveis e feitos sob medida para você. Nosso foco está em garantir sua satisfação, sempre com um atendimento humanizado, tecnologia de ponta e compromisso com a excelência. Mais do que uma empresa, somos parceiros na sua jornada!</p>
-            <a><button>Fale conosco</button></a>
+            <a href="https://wa.me/5588981252883"><button>Fale conosco</button></a>
         </div>
     </section>
     <section>
